--- a/styles.css
+++ b/styles.css
@@ -486,3 +486,12 @@ p {
         height: 70vw;
     }
 }
+
+
+@media (max-width: 400px) {
+    .Projects {
+        margin-top: 4vh;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+}
