--- a/styles.css
+++ b/styles.css
@@ -489,8 +489,33 @@ p {
 
 
 @media (max-width: 400px) {
+
+    .About {
+        margin-top: 2vh;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
     .Projects {
-        margin-top: 4vh;
+        margin-top: 2vh;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    .Teaching {
+        margin-top: 0;
+        margin-left: 5vw;
+        margin-right: 5vw;
+        position: relative;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .Other {
+        margin-top: 2vh;
         margin-left: 5vw;
         margin-right: 5vw;
     }
