--- a/styles.css
+++ b/styles.css
@@ -492,31 +492,17 @@ p {
 
     .About {
         margin-top: 2vh;
-        margin-left: 5vw;
-        margin-right: 5vw;
     }
 
     .Projects {
         margin-top: 2vh;
-        margin-left: 5vw;
-        margin-right: 5vw;
     }
 
     .Teaching {
-        margin-top: 0;
-        margin-left: 5vw;
-        margin-right: 5vw;
-        position: relative;
-        z-index: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
+        margin-top: 2vh;
     }
 
     .Other {
         margin-top: 2vh;
-        margin-left: 5vw;
-        margin-right: 5vw;
     }
 }
